--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
